applications/github-actions-runners/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-inbound
spec:
  podSelector: {}
  policyTypes: [Ingress]
  ingress: []
